resume sub heading reformatting

--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -61,20 +61,20 @@
 					<section>
 						<h2 class="resume-headline">Education</h2>
 							<strong>BA History, GIS</strong>
-								<div>University of Connecticut, College of Liberal Arts and Sciences</div>
-								<div>Fall 2015</div> 
-								<ul>
-									<li class="resume-list">Bachelor of Arts in History, Geographic Information Systems/Sciences (GIS) minor</li>
-									<li class="resume-list">Honors Thesis: ClioGraphy, Historical Geospatial Analysis</li>
-								</ul>
-							<div>University of Vermont</div>
-								<div>Attended: 2011-2012</div>
-								<ul>
-									<li class="resume-list"></li>
-								</ul>
+								<div class="sub-head-list">University of Connecticut, College of Liberal Arts and Sciences</div>
+								<div class="sub-head-list">Fall 2015</div> 
+									<ul>
+										<li class="resume-list">Bachelor of Arts in History, Geographic Information Systems/Sciences (GIS) minor</li>
+										<li class="resume-list">Honors Thesis: ClioGraphy, Historical Geospatial Analysis</li>
+									</ul>
+								<div class="sub-head-list">University of Vermont</div>
+								<div class="sub-head-list">Attended: 2011-2012</div>
+									<ul>
+										<li class="resume-list"></li>
+									</ul>
 							<strong>High School Diploma</strong>
-								<div>Westhill High School</div>
-								<div>Spring 2011</div>
+								<div class="sub-head-list">Westhill High School</div>
+								<div class="sub-head-list">Spring 2011</div>
 								<ul>
 									<li class="resume-list">Member and graduate of the Academy of Finance: Member of the Future Business Leaders of America (FBLA)</li>
 								</ul>
@@ -131,64 +131,64 @@
 					<section>
 						<h2 class="resume-headline">Experience</h2>
 							<strong>ClioGraphica | Location Intelligence Firm</strong>
-								<div>Founder/Operator</div>
-								<div>11/2015 - present</div>
+								<div class="sub-head-list">Founder/Operator</div>
+								<div class="sub-head-list">11/2015 - present</div>
 								<ul>
 									<li class="resume-list">Owner and Operator of ClioGraphica, a Location Intelligence Firm which aims to provide geospatial intelligence consulting services for non-profits organizations, client businesses, and municipalities</li>
 									<li class="resume-list">Develops Geodatabases for client use by GPS Data Collection Campaign, digitization of organization records, or other available data sources</li>
 									<li class="resume-list">Provide innovative geospatial services utilizing cutting edge technology and data models for a wide variety of clientele</li>
 								</ul>
 							<strong>GIS, History, & Digital Humanities Tutor</strong>
-								<div>10/2014 - present</div>
+								<div class="sub-head-list">10/2014 - present</div>
 								<ul>
 									<li class="resume-list">Tutor graduate and undergraduate level GIS practices, system and database administration, and geospatial analytics</li>
 									<li class="resume-list">Graduate and undergraduate level history tutor - focus on analytical writing and Digital Humanities research</li>
 								</ul>
 							<strong>Redniss and Mead Land Use Consulting Firm</strong>
-								<div>Intern in Planning Department, GIS Specialist</div>
-								<div>09/2015 - 12/2015</div>
+								<div class="sub-head-list">Intern in Planning Department, GIS Specialist</div>
+								<div class="sub-head-list">09/2015 - 12/2015</div>
 								<ul>
 									<li class="resume-list">Worked in Land Use and Planning Department on ecologically diverse projects throughout Fairfield County, CT</li>
 									<li class="resume-list">Utilized GIS to create maps of property with accompanying research</li>
 									<li class="resume-list">Researched land records and legal regulations pertinent to client properties in effort to draft regulation variances or project proposals</li>
 								</ul>
 							<strong>Connecticut State Museum of Natural History</strong>
-							<div>Student Administrator</div>
-							<div>5/2014 – 5/2015</div>
+								<div class="sub-head-list">Student Administrator</div>
+								<div class="sub-head-list">5/2014 – 5/2015</div>
 								<ul>
 									<li class="resume-list">Organized and maintaind museum files regarding different sponsored events</li>
 								</ul>
 							<strong>Connecticut State Archeologist, Brian Jones</strong>
-								<div>Research Assistant, Online GIS</div>
-								<div>09/2014 – 12/2014</div>
+								<div class="sub-head-list">Research Assistant, Online GIS</div>
+								<div class="sub-head-list">09/2014 – 12/2014</div>
 								<ul>
 									<li class="resume-list">Utilized open source software to develop and design an online  GIS interface to house and map data of the Office of the State Archaeologist</li>
 									<li class="resume-list">Mapped Archeological data using Google Fusion Tables platform</li>
 								</ul>
 							<strong>Geomorphology and Earth Processes Research Team</strong>
-								<div>Researcher, GIS Analyst, led by Professor Ouimet</div> 
-								<div>06/10/2014 – 12/10/14</div>
+								<div class="sub-head-list">Researcher, GIS Analyst, led by Professor Ouimet</div> 
+								<div class="sub-head-list">06/10/2014 – 12/10/14</div>
 								<ul>
 									<li class="resume-list">Study the history, mechanics and evolution of landscapes at human timescales</li>
 									<li class="resume-list">Leveraged ArcGIS software and LiDAR data to construct Digital Elevation Models (DEMs) to identify, geoprocess and map charcoal hearths as part of an investigation pertaining to historical Connecticut geography</li>
 								</ul>
 							<strong>Connecticut State Data Center & Univ. Libraries’ Maps and Geographic Information Center</strong>
-							<div>Census and Geospatial Data Assistant, Historical GIS Specialist, GIS Analyst</div>
-							<div>10/2013 – 6/2014</div>
+								<div class="sub-head-list">Census and Geospatial Data Assistant, Historical GIS Specialist, GIS Analyst</div>
+								<div class="sub-head-list">10/2013 – 6/2014</div>
 								<ul>
 									<li class="resume-list">Functioned as a GIS analyst in an office which contracted state-wide geospatial data projects</li>
 									<li class="resume-list">Used ArcGIS as GIS software; familiar with file sharing methods among multi-person GIS analyst teams</li>
 									<li class="resume-list">Utilized ArcGIS and census data to construct historical GISystems and maps for Virtual Hartford</li>
 								</ul>
 							<strong>Virtual Hartford Research Team</strong>
-							<div>Digital Humanities Researcher, GIS Specialist</div>
-							<div>10/2013 – 12/2015</div>
+								<div class="sub-head-list">Digital Humanities Researcher, GIS Specialist</div>
+								<div class="sub-head-list">10/2013 – 12/2015</div>
 								<ul>
 									<li class="resume-list">Functioned as a geographic information specialist for Virtual Hartford, a team of graduate and undergraduate students who are constructing an educational website dedicated to historical Hartford, CT</li> 
 									<li class="resume-list">Researched, processed, and integrated relevant data to create dynamic cartographic representations of Virtual Hartford research projects</li>
 								</ul>
 							<strong>Junior Accountant at Strictly Accounting: Bill Pay U.S.A.:</strong>
-								<div>2009 – 2011</div>
+								<div class="sub-head-list">2009 – 2011</div>
 								<ul>
 									<li class="resume-list">Processed tax returns, book-keeping for individuals and businesses and office/file maintenance</li>
 								</ul>
