--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -177,7 +177,7 @@
 								<div class="sub-head-list">10/2013 – 6/2014</div>
 								<ul>
 									<li class="resume-list">Functioned as a GIS analyst in an office which contracted state-wide geospatial data projects</li>
-									<li class="resume-list">Used ArcGIS as GIS software; familiar with file sharing methods among multi-person GIS analyst teams</li>
+									<li class="resume-list">Focused on researching maps and associated textual documentation, georeferencing these maps to create workable primary source material for students studying Digital Humanities, creating metadata for georeferenced maps and datasets, and heads-up digitizing derivative data for historical analysis</li>
 									<li class="resume-list">Utilized ArcGIS and census data to construct historical GISystems and maps for Virtual Hartford</li>
 								</ul>
 							<strong>Virtual Hartford Research Team</strong>
