projects page menu

--- a/portfolio/portfolio-final/projects-folder/projects.html
+++ b/portfolio/portfolio-final/projects-folder/projects.html
@@ -34,21 +34,24 @@
 		<h2>GIS, History, and Digital Humanities</h2>
 
 		<h3><a name="Cliography">Cliography</a></h3>
-		
-<h4>Project Menu</h4>		
-<nav>
+				
+<nav class="project-menu">
+
+	<h4>Project Menu</h4>
+
 	<div>
-		<a class="project-menu" href="#">Top of Page</a>
+		<a class="project-menu-item" href="#">Top of Page</a>
 	</div>
 	<div>
-		<a class="project-menu" href="#Cliography">Research and Digital Humanities</a>
+		<a class="project-menu-item" href="#Cliography">Research and Digital Humanities</a>
 	</div>
 	<div>
-		<a class="project-menu" href="#GIS Course Work Examples">GIS, Geospatial Data Analytics, and Location Intelligence</a>
+		<a class="project-menu-item" href="#GIS Course Work Examples">GIS, Geospatial Data Analytics, and Location Intelligence</a>
 	</div>
 	<div>
-		<a class="project-menu" href="#Historical Analysis Examples">Historical Analysis</a>
+		<a class="project-menu-item" href="#Historical Analysis Examples">Historical Analysis</a>
 	</div>
+	
 </nav>
 
 		<hr>
