edited project page nav bar

--- a/portfolio/portfolio-final/projects-folder/projects.html
+++ b/portfolio/portfolio-final/projects-folder/projects.html
@@ -33,25 +33,25 @@
 		
 		<h2>GIS, History, and Digital Humanities</h2>
 
-		<h3><a name="Cliography">Cliography</a></h3>
-				
-<nav class="project-menu">
+		<h3><a name="Research and Digital Humanities">Research and Digital Humanities</a></h3>
+	
+<h4>Project Menu</h4>
 
-	<h4>Project Menu</h4>
+<nav class="project-menu">
 
 	<div>
 		<a class="project-menu-item" href="#">Top of Page</a>
 	</div>
 	<div>
-		<a class="project-menu-item" href="#Cliography">Research and Digital Humanities</a>
+		<a class="project-menu-item" href="#Research and Digital Humanities">Research and Digital Humanities</a>
 	</div>
 	<div>
-		<a class="project-menu-item" href="#GIS Course Work Examples">GIS, Geospatial Data Analytics, and Location Intelligence</a>
+		<a class="project-menu-item" href="#GIS, Geospatial Data Analytics, and Location Intelligence">GIS, Geospatial Data Analytics, and Location Intelligence</a>
 	</div>
 	<div>
-		<a class="project-menu-item" href="#Historical Analysis Examples">Historical Analysis</a>
+		<a class="project-menu-item" href="#Historical Analysis">Historical Analysis</a>
 	</div>
-	
+
 </nav>
 
 		<hr>
@@ -130,20 +130,26 @@
 
 		</ul>
 
-		<h3><a name="GIS Course Work Examples">GIS Course Work Examples</a></h3>
+		<h3><a name="GIS, Geospatial Data Analytics, and Location Intelligence">GIS, Geospatial Data Analytics, and Location Intelligence</a></h3>
 
-<div>
-	<a class="project-menu" href="#">Top of Page</a>
-</div>
-<div>
-	<a class="project-menu" href="#Cliography">Research and Digital Humanities</a>
-</div>
-<div>
-	<a class="project-menu" href="#GIS Course Work Examples">GIS, Geospatial Data Analytics, and Location Intelligence</a>
-</div>
-<div>
-	<a class="project-menu" href="#Historical Analysis Examples">Historical Analysis</a>
-</div>
+<h4>Project Menu</h4>
+
+<nav class="project-menu">
+
+	<div>
+		<a class="project-menu-item" href="#">Top of Page</a>
+	</div>
+	<div>
+		<a class="project-menu-item" href="#Research and Digital Humanities">Research and Digital Humanities</a>
+	</div>
+	<div>
+		<a class="project-menu-item" href="#GIS, Geospatial Data Analytics, and Location Intelligence">GIS, Geospatial Data Analytics, and Location Intelligence</a>
+	</div>
+	<div>
+		<a class="project-menu-item" href="#Historical Analysis">Historical Analysis</a>
+	</div>
+
+</nav>
 
 		<hr>
 
@@ -311,20 +317,26 @@
 
 		</ul>
 
-	<h3><a name="Historical Analysis Examples">Historical Analysis Examples</a></h3>
+	<h3><a name="Historical Analysis">Historical Analysis</a></h3>
 
-<div>
-	<a class="project-menu" href="#">Top of Page</a>
-</div>
-<div>
-	<a class="project-menu" href="#Cliography">Research and Digital Humanities</a>
-</div>
-<div>
-	<a class="project-menu" href="#GIS Course Work Examples">GIS, Geospatial Data Analytics, and Location Intelligence</a>
-</div>
-<div>
-	<a class="project-menu" href="#Historical Analysis Examples">Historical Analysis</a>
-</div>
+<h4>Project Menu</h4>
+
+<nav class="project-menu">
+
+	<div>
+		<a class="project-menu-item" href="#">Top of Page</a>
+	</div>
+	<div>
+		<a class="project-menu-item" href="#Research and Digital Humanities">Research and Digital Humanities</a>
+	</div>
+	<div>
+		<a class="project-menu-item" href="#GIS, Geospatial Data Analytics, and Location Intelligence">GIS, Geospatial Data Analytics, and Location Intelligence</a>
+	</div>
+	<div>
+		<a class="project-menu-item" href="#Historical Analysis">Historical Analysis</a>
+	</div>
+
+</nav>
 
 	<hr>
 
