--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -60,6 +60,13 @@
 
 					<section>
 						<h2 class="resume-headline">Education</h2>
+							<strong>GC GEOINT Analytics</strong>
+								<div class="sub-head-list">Pennsylvania State University (WC), USGIF</div>
+								<div class="sub-head-list">Summer 2016 - present</div>
+									<ul>
+										<li class="resume-list">Graduate Certificate in Geospatial Intelligence Analytics</li>
+										<li class="resume-list">Collegiate Accreditation by United States Geospatial Intelligence Foundation</li>
+									</ul>
 							<strong>BA History, GIS</strong>
 								<div class="sub-head-list">University of Connecticut, College of Liberal Arts and Sciences</div>
 								<div class="sub-head-list">Fall 2015</div> 
