updated projects menu

--- a/portfolio/portfolio-final/projects-folder/projects.html
+++ b/portfolio/portfolio-final/projects-folder/projects.html
@@ -34,25 +34,25 @@
 		<h2>GIS, History, and Digital Humanities</h2>
 
 		<h3><a name="Research and Digital Humanities">Research and Digital Humanities</a></h3>
-	
-<h4>Project Menu</h4>
 
-<nav class="project-menu">
+<nav class="portfolio-navigation">
+		<ul class="index-navigation-menu">			
+			<li class="index-navigation-item">
+				<a class="index-navigation-link" href="#">Top of Page</a>
+			</li>
 
-	<div>
-		<a class="project-menu-item" href="#">Top of Page</a>
-	</div>
-	<div>
-		<a class="project-menu-item" href="#Research and Digital Humanities">Research and Digital Humanities</a>
-	</div>
-	<div>
-		<a class="project-menu-item" href="#GIS, Geospatial Data Analytics, and Location Intelligence">GIS, Geospatial Data Analytics, and Location Intelligence</a>
-	</div>
-	<div>
-		<a class="project-menu-item" href="#Historical Analysis">Historical Analysis</a>
-	</div>
-
-</nav>
+			<li class="index-navigation-item">
+				<a class="index-navigation-link" href="#Research and Digital Humanities">Research and Digital Humanities</a>
+			</li>
+			
+			<li class="index-navigation-item">
+				<a class="index-navigation-link" href="#GIS, Geospatial Data Analytics, and Location Intelligence">GIS, Geospatial Data Analytics, and Location Intelligence</a>
+			</li>
+			<li class="index-navigation-item">
+				<a class="index-navigation-link" href="#Historical Analysis">Historical Analysis</a>
+			</li>
+		</ul>
+	</nav>
 
 		<hr>
 
@@ -132,23 +132,23 @@
 
 		<h3><a name="GIS, Geospatial Data Analytics, and Location Intelligence">GIS, Geospatial Data Analytics, and Location Intelligence</a></h3>
 
-<h4>Project Menu</h4>
+<nav class="portfolio-navigation">
+		<ul class="index-navigation-menu">			
+			<li class="index-navigation-item">
+				<a class="index-navigation-link" href="#">Top of Page</a>
+			</li>
 
-<nav class="project-menu">
-
-	<div>
-		<a class="project-menu-item" href="#">Top of Page</a>
-	</div>
-	<div>
-		<a class="project-menu-item" href="#Research and Digital Humanities">Research and Digital Humanities</a>
-	</div>
-	<div>
-		<a class="project-menu-item" href="#GIS, Geospatial Data Analytics, and Location Intelligence">GIS, Geospatial Data Analytics, and Location Intelligence</a>
-	</div>
-	<div>
-		<a class="project-menu-item" href="#Historical Analysis">Historical Analysis</a>
-	</div>
-
+			<li class="index-navigation-item">
+				<a class="index-navigation-link" href="#Research and Digital Humanities">Research and Digital Humanities</a>
+			</li>
+			
+			<li class="index-navigation-item">
+				<a class="index-navigation-link" href="#GIS, Geospatial Data Analytics, and Location Intelligence">GIS, Geospatial Data Analytics, and Location Intelligence</a>
+			</li>
+			<li class="index-navigation-item">
+				<a class="index-navigation-link" href="#Historical Analysis">Historical Analysis</a>
+			</li>
+		</ul>
 </nav>
 
 		<hr>
@@ -319,23 +319,23 @@
 
 	<h3><a name="Historical Analysis">Historical Analysis</a></h3>
 
-<h4>Project Menu</h4>
+<nav class="portfolio-navigation">
+		<ul class="index-navigation-menu">			
+			<li class="index-navigation-item">
+				<a class="index-navigation-link" href="#">Top of Page</a>
+			</li>
 
-<nav class="project-menu">
-
-	<div>
-		<a class="project-menu-item" href="#">Top of Page</a>
-	</div>
-	<div>
-		<a class="project-menu-item" href="#Research and Digital Humanities">Research and Digital Humanities</a>
-	</div>
-	<div>
-		<a class="project-menu-item" href="#GIS, Geospatial Data Analytics, and Location Intelligence">GIS, Geospatial Data Analytics, and Location Intelligence</a>
-	</div>
-	<div>
-		<a class="project-menu-item" href="#Historical Analysis">Historical Analysis</a>
-	</div>
-
+			<li class="index-navigation-item">
+				<a class="index-navigation-link" href="#Research and Digital Humanities">Research and Digital Humanities</a>
+			</li>
+			
+			<li class="index-navigation-item">
+				<a class="index-navigation-link" href="#GIS, Geospatial Data Analytics, and Location Intelligence">GIS, Geospatial Data Analytics, and Location Intelligence</a>
+			</li>
+			<li class="index-navigation-item">
+				<a class="index-navigation-link" href="#Historical Analysis">Historical Analysis</a>
+			</li>
+		</ul>
 </nav>
 
 	<hr>
