updated GC Penn college

--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -64,7 +64,7 @@
 								<div class="sub-head-list">Pennsylvania State University (WC), USGIF</div>
 								<div class="sub-head-list">Summer 2016 - present</div>
 									<ul>
-										<li class="resume-list">Graduate Certificate in Geospatial Intelligence Analytics</li>
+										<li class="resume-list">Graduate Certificate in Geospatial Intelligence Analytics, College of Earth and Mineral Sciences</li>
 										<li class="resume-list">Collegiate Accreditation by United States Geospatial Intelligence Foundation</li>
 									</ul>
 							<strong>BA History, GIS</strong>
