projects nav pane

--- a/portfolio/portfolio-final/projects-folder/projects.html
+++ b/portfolio/portfolio-final/projects-folder/projects.html
@@ -36,20 +36,20 @@
 		<h3><a name="Research and Digital Humanities">Research and Digital Humanities</a></h3>
 
 <nav class="portfolio-navigation">
-		<ul class="index-navigation-menu">			
-			<li class="index-navigation-item">
-				<a class="index-navigation-link" href="#">Top of Page</a>
+		<ul class="project-navigation-menu">			
+			<li class="project-navigation-item">
+				<a class="project-navigation-link" href="#">Top of Page</a>
 			</li>
 
-			<li class="index-navigation-item">
-				<a class="index-navigation-link" href="#Research and Digital Humanities">Research and Digital Humanities</a>
+			<li class="project-navigation-item">
+				<a class="project-navigation-link" href="#Research and Digital Humanities">Research and Digital Humanities</a>
 			</li>
 			
-			<li class="index-navigation-item">
-				<a class="index-navigation-link" href="#GIS, Geospatial Data Analytics, and Location Intelligence">GIS, Geospatial Data Analytics, and Location Intelligence</a>
+			<li class="project-navigation-item">
+				<a class="project-navigation-link" href="#GIS, Geospatial Data Analytics, and Location Intelligence">GIS, Geospatial Data Analytics, and Location Intelligence</a>
 			</li>
-			<li class="index-navigation-item">
-				<a class="index-navigation-link" href="#Historical Analysis">Historical Analysis</a>
+			<li class="project-navigation-item">
+				<a class="project-navigation-link" href="#Historical Analysis">Historical Analysis</a>
 			</li>
 		</ul>
 	</nav>
@@ -133,23 +133,23 @@
 		<h3><a name="GIS, Geospatial Data Analytics, and Location Intelligence">GIS, Geospatial Data Analytics, and Location Intelligence</a></h3>
 
 <nav class="portfolio-navigation">
-		<ul class="index-navigation-menu">			
-			<li class="index-navigation-item">
-				<a class="index-navigation-link" href="#">Top of Page</a>
+		<ul class="project-navigation-menu">			
+			<li class="project-navigation-item">
+				<a class="project-navigation-link" href="#">Top of Page</a>
 			</li>
 
-			<li class="index-navigation-item">
-				<a class="index-navigation-link" href="#Research and Digital Humanities">Research and Digital Humanities</a>
+			<li class="project-navigation-item">
+				<a class="project-navigation-link" href="#Research and Digital Humanities">Research and Digital Humanities</a>
 			</li>
 			
-			<li class="index-navigation-item">
-				<a class="index-navigation-link" href="#GIS, Geospatial Data Analytics, and Location Intelligence">GIS, Geospatial Data Analytics, and Location Intelligence</a>
+			<li class="project-navigation-item">
+				<a class="project-navigation-link" href="#GIS, Geospatial Data Analytics, and Location Intelligence">GIS, Geospatial Data Analytics, and Location Intelligence</a>
 			</li>
-			<li class="index-navigation-item">
-				<a class="index-navigation-link" href="#Historical Analysis">Historical Analysis</a>
+			<li class="project-navigation-item">
+				<a class="project-navigation-link" href="#Historical Analysis">Historical Analysis</a>
 			</li>
 		</ul>
-</nav>
+	</nav>
 
 		<hr>
 
@@ -320,23 +320,23 @@
 	<h3><a name="Historical Analysis">Historical Analysis</a></h3>
 
 <nav class="portfolio-navigation">
-		<ul class="index-navigation-menu">			
-			<li class="index-navigation-item">
-				<a class="index-navigation-link" href="#">Top of Page</a>
+		<ul class="project-navigation-menu">			
+			<li class="project-navigation-item">
+				<a class="project-navigation-link" href="#">Top of Page</a>
 			</li>
 
-			<li class="index-navigation-item">
-				<a class="index-navigation-link" href="#Research and Digital Humanities">Research and Digital Humanities</a>
+			<li class="project-navigation-item">
+				<a class="project-navigation-link" href="#Research and Digital Humanities">Research and Digital Humanities</a>
 			</li>
 			
-			<li class="index-navigation-item">
-				<a class="index-navigation-link" href="#GIS, Geospatial Data Analytics, and Location Intelligence">GIS, Geospatial Data Analytics, and Location Intelligence</a>
+			<li class="project-navigation-item">
+				<a class="project-navigation-link" href="#GIS, Geospatial Data Analytics, and Location Intelligence">GIS, Geospatial Data Analytics, and Location Intelligence</a>
 			</li>
-			<li class="index-navigation-item">
-				<a class="index-navigation-link" href="#Historical Analysis">Historical Analysis</a>
+			<li class="project-navigation-item">
+				<a class="project-navigation-link" href="#Historical Analysis">Historical Analysis</a>
 			</li>
 		</ul>
-</nav>
+	</nav>
 
 	<hr>
 
