--- a/portfolio/portfolio-final/projects-folder/projects.html
+++ b/portfolio/portfolio-final/projects-folder/projects.html
@@ -31,7 +31,7 @@
 	
 	<div class="portfolio-container">
 		
-		<h2>GIS, History, and Digital Humanities</h2>
+		<h2>Projects & Research: GIS, Geospatial, History, and DH</h2>
 
 		<h3><a name="Research and Digital Humanities">Research and Digital Humanities</a></h3>
 
