projects nav pane

--- a/portfolio/portfolio-final/projects-folder/projects.html
+++ b/portfolio/portfolio-final/projects-folder/projects.html
@@ -33,7 +33,7 @@
 		
 		<h2>Projects & Research: GIS, Geospatial, History, and DH</h2>
 
-		<h3><a name="Research and Digital Humanities">Research and Digital Humanities</a></h3>
+		<h3 class="project-subsection"><a name="Research and Digital Humanities">Research and Digital Humanities</a></h3>
 
 <nav class="portfolio-navigation">
 		<ul class="project-navigation-menu">			
@@ -130,7 +130,7 @@
 
 		</ul>
 
-		<h3><a name="GIS, Geospatial Data Analytics, and Location Intelligence">GIS, Geospatial Data Analytics, and Location Intelligence</a></h3>
+		<h3 class="project-subsection"><a name="GIS, Geospatial Data Analytics, and Location Intelligence">GIS, Geospatial Data Analytics, and Location Intelligence</a></h3>
 
 <nav class="portfolio-navigation">
 		<ul class="project-navigation-menu">			
@@ -317,7 +317,7 @@
 
 		</ul>
 
-	<h3><a name="Historical Analysis">Historical Analysis</a></h3>
+	<h3 class="project-subsection"><a name="Historical Analysis">Historical Analysis</a></h3>
 
 <nav class="portfolio-navigation">
 		<ul class="project-navigation-menu">			
