linked uconn diploma and honor society pdf

--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -71,8 +71,8 @@
 								<div class="sub-head-list">University of Connecticut, College of Liberal Arts and Sciences</div>
 								<div class="sub-head-list">Fall 2015</div> 
 									<ul>
-										<li class="resume-list">Bachelor of Arts in History, Geographic Information Systems/Sciences (GIS) minor</li>
-										<li class="resume-list">Honors Thesis: ClioGraphy, Historical Geospatial Analysis</li>
+										<li class="resume-list"><a href="diploma-uconn.pdf" target="_blank">Bachelor of Arts in History, Geographic Information Systems/Sciences (GIS) minor</a></li>
+										<li class="resume-list"><a href="honors-thesis.pdf" target="_blank">Honors Thesis: ClioGraphy, Historical Geospatial Analysis</a></li>
 									</ul>
 								<div class="sub-head-list">University of Vermont</div>
 								<div class="sub-head-list">Attended: 2011-2012</div>
@@ -94,7 +94,7 @@
 							<strong>University of Connecticut</strong>
 								<ul>
 									<li class="resume-list">University of Connecticut Honors Scholar Program: <span class="resume">March, 2014 - December, 2015</span></li>
-									<li class="resume-list">Phi Alpha Theta History Honors Society: <span>Inducted May, 2014</span></li>
+									<li class="resume-list"><a href="national-honors-society.pdf" target="_blank">Phi Alpha Theta History Honors Society: <span>Inducted May, 2014</span></a></li>
 								</ul>
 					</section>
 
