added online certifs

--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -207,7 +207,7 @@
 						<h2 class="resume-headline">Computer Skills</h2>
 							<strong>Software Packages</strong>
 								<ul>
-									<li class="resume-list">ArcGIS: 10.3; Adobe Photoshop; MS Office Suite 2013</li>
+									<li class="resume-list"><a href="esri-certs-merge.pdf" target="blank">GIS & ArcGIS 10.4</a>; Adobe Photoshop; MS Office Suite 2013</li>
 								</ul>
 								<div></div>
 							<strong>Code Languages</strong>
