updated resume conferences

--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -131,18 +131,50 @@
 
 					<section>
 						<h2 class="resume-headline">Professional Academic Conferences and Symposiums</h2>
-							<strong>Presenter</strong>
+							<strong>UConn Frontiers Poster Exhibition</strong>
+								<div class="sub-head-list">Author, Presenter</div>
+								<div class="sub-head-list">04/10/2015</div>
 								<ul>
-									<li class="resume-list">UConn Frontiers Poster Exhibition</li>
-									<li class="resume-list">Panel member at UConn Center for Career Development</li>
-									<li class="resume-list">Northeast Arc Users Group Spring Spatial Technologies (NEArc) Conference</li>
-									<li class="resume-list">Association for the Study of Connecticut History (ASCH) Conference</li>
+									<li class="resume-list">Presented IDEA Grant research at UConn exhibition of undergraduate research and achievement</li>
+									<li class="resume-list">Focused on research findings and methodology of Historical GIS case study</li>
 								</ul>
-							<strong>Authored</strong>
+							<strong>UConn Center for Career Development</strong>
+								<div class="sub-head-list">Panel Member, Presenter</div>
+								<div class="sub-head-list">02/16/2015</div>
 								<ul>
-									<li class="resume-list"><a href="Geomorph-GSA-Conference.pdf" target="_blank">Northeastern Geological Society of America (GSA) Conference</a></li>
-									<li class="resume-list">Northeast Arc Users Group Fall Educators (NEArc) Conference</li>
+									<li class="resume-list">Presented my self-developed interdepartmental on-campus internship experience and the potential benefit of exploring research projects through internships</li>
+									<li class="resume-list">Focused on the significance of student self-advocacy</li>
+									<li class="resume-list">Collaborated with University of Connecticut’s Center for Career Development to promote and facilitate undergraduate on-campus internships, with a focus on inter-departmental collaborations and self-created opportunities that enhance deep and authentic learning experiences</li>
 								</ul>
+							<strong><a href="Geomorph-GSA-Conference.pdf" target="_blank">Northeastern Geological Society of America (GSA) Conference presentation</a></strong>
+								<div class="sub-head-list">Co-author</div>
+								<div class="sub-head-list">Spring 2015</div>
+								<ul>
+									<li class="resume-list">Presented by colleagues Professor William Ouimet and Graduate student Kate Johnson of the UConn Geomorphology and Earth Processes Research Team</li>
+									<li class="resume-list">Focused on geospatial and LiDAR based analysis of 18th to early 19th century timber harvesting and charcoal production in southern New England; remote sensing, landscape history</li>
+								</ul>
+							<strong>Northeast Arc Users Group Fall Educators (NEArc) Conference presentation</strong>
+								<div class="sub-head-list">Co-author</div>
+								<div class="sub-head-list">Fall 2014</div>
+								<ul>
+									<li class="resume-list">Presented by colleague  Michael Howser – Director of Connecticut State Data Center at UConn</li>
+									<li class="resume-list">Discussed our on-campus internship initiative and the benefits of interdepartmental collaboration such as deep and authentic learning</li>
+								</ul>
+							<strong>Northeast Arc Users Group Spring Spatial Technologies (NEArc) Conference</strong>
+								<div class="sub-head-list">Author, Presenter</div>
+								<div class="sub-head-list">05/13/2014</div>
+								<ul>
+									<li class="resume-list"><a href="http://magic.lib.uconn.edu/about_magic.html" target="_blank">Presentation title: Historians to Geographers: Using Maps to Illustrate Hartford’s Cultural Heritage</a></li>
+									<li class="resume-list">"Hartford’s rich cultural heritage involves a number of events which have a spatial connection, a connection which is illustrated with the Virtual Hartford project. This presentation will explore ideas and concepts that connect history with spatial location using maps, archives, and content. Utilizing collections from the Hartford History Center, Connecticut Historical Society, and the UConn Libraries MAGIC, this project connects archival content to maps to enable student and prospective researchers to reinterpret the history of Hartford, CT based on primary sources. Join us as we explore how to leverage ArcGIS, Google Maps, and Omeka Neatline to connect users with primary sources based on locations in Hartford, Connecticut." - Abstract</li>
+								</ul>
+							<strong>Association for the Study of Connecticut History (ASCH) Conference</strong>
+								<div class="sub-head-list">Author, Presenter</div>
+								<div class="sub-head-list">04/05/2014</div>
+								<ul>
+									<li class="resume-list">Presentation title: Virtual Hartford: Interactive Microhistories and the Digital Humanities</li>
+									<li class="resume-list">Discussed the viability of incorporating GIS analysis into a humanities focused historical analysis</li>
+								</ul>
+
 					</section>
 
 			<hr>
