editing resume - conference

--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -146,14 +146,14 @@
 									<li class="resume-list">Focused on the significance of student self-advocacy</li>
 									<li class="resume-list">Collaborated with University of Connecticut’s Center for Career Development to promote and facilitate undergraduate on-campus internships, with a focus on inter-departmental collaborations and self-created opportunities that enhance deep and authentic learning experiences</li>
 								</ul>
-							<strong><a href="Geomorph-GSA-Conference.pdf" target="_blank">Northeastern Geological Society of America (GSA) Conference presentation</a></strong>
+							<strong><a href="Geomorph-GSA-Conference.pdf" target="_blank">Northeastern Geological Society of America (GSA) Conference</a></strong>
 								<div class="sub-head-list">Co-author</div>
 								<div class="sub-head-list">Spring 2015</div>
 								<ul>
 									<li class="resume-list">Presented by colleagues Professor William Ouimet and Graduate student Kate Johnson of the UConn Geomorphology and Earth Processes Research Team</li>
 									<li class="resume-list">Focused on geospatial and LiDAR based analysis of 18th to early 19th century timber harvesting and charcoal production in southern New England; remote sensing, landscape history</li>
 								</ul>
-							<strong>Northeast Arc Users Group Fall Educators (NEArc) Conference presentation</strong>
+							<strong>Northeast Arc Users Group Fall Educators (NEArc) Conference</strong>
 								<div class="sub-head-list">Co-author</div>
 								<div class="sub-head-list">Fall 2014</div>
 								<ul>
