edited resume conference post, text size

--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -162,8 +162,8 @@
 								<div class="sub-head-list">Co-author</div>
 								<div class="sub-head-list">Spring 2015</div>
 								<ul>
-									<li class="resume-list">Presented by colleagues Professor William Ouimet and Graduate student Kate Johnson of the UConn Geomorphology and Earth Processes Research Team</li>
-									<li class="resume-list">Focused on geospatial and LiDAR based analysis of 18th to early 19th century timber harvesting and charcoal production in southern New England; remote sensing, landscape history</li>
+									<li class="resume-list">Presented by colleagues Professor William Ouimet and Graduate student Kate Johnson of the UConn Department of Geography	& Center for Integrative	Geosciences</li>
+									<li class="resume-list">Conducted Geospatial and LiDAR-based analysis of 18th to early 20th century timber harvesting	and charcoal production	in southern	New	England to generate data for further study of Connecticut Geomorphology</li>
 								</ul>
 							<strong>Northeast Arc Users Group Fall Educators (NEArc) Conference</strong>
 								<div class="sub-head-list">Co-author</div>
@@ -204,7 +204,8 @@
 									<li class="resume-list">Develops Geodatabases for client use by GPS Data Collection Campaign, digitization of organization records, or other available data sources</li>
 									<li class="resume-list">Provide innovative geospatial services utilizing cutting edge technology and data models for a wide variety of clientele</li>
 								</ul>
-							<strong>GIS, History, & Digital Humanities Tutor</strong>
+							<strong>WyzAnt Tutoring, Inc.</strong>
+								<div class="sub-head-list">GIS, Geospatial, History, and Digital Humanities Tutor</div>
 								<div class="sub-head-list">10/2014 - present</div>
 								<ul>
 									<li class="resume-list">Tutor graduate and undergraduate level GIS practices, system and database administration, and geospatial analytics</li>
