updated resume work expereience

--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -240,10 +240,10 @@
 									<li class="resume-list">Leveraged ArcGIS software and LiDAR data to construct Digital Elevation Models (DEMs) to identify, geoprocess and map charcoal hearths as part of an investigation pertaining to historical Connecticut geography</li>
 								</ul>
 							<strong>Connecticut State Data Center & Univ. Libraries’ Maps and Geographic Information Center</strong>
-								<div class="sub-head-list">Census and Geospatial Data Assistant, Historical GIS Specialist, GIS Analyst</div>
+								<div class="sub-head-list">Census and Geospatial Data Assistant, Enterprise GIS Analyst, Historical GIS Specialist, GIS Analyst</div>
 								<div class="sub-head-list">10/2013 – 6/2014</div>
 								<ul>
-									<li class="resume-list">Functioned as a GIS analyst in an office which contracted state-wide geospatial data projects</li>
+									<li class="resume-list">Functioned as Enterprise GIS analyst in an office which contracted state-wide geospatial data projects</li>
 									<li class="resume-list">Focused on researching maps and associated textual documentation, georeferencing these maps to create workable primary source material for students studying Digital Humanities, creating metadata for georeferenced maps and datasets, and heads-up digitizing derivative data for historical analysis</li>
 									<li class="resume-list">Utilized ArcGIS and census data to construct historical GISystems and maps for Virtual Hartford</li>
 								</ul>
