--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -143,7 +143,7 @@
 
 					<section>
 						<h2 class="resume-headline">Professional Academic Conferences</h2>
-							<strong>UConn Frontiers Poster Exhibition</strong>
+							<strong><a href="http://zraslan.github.io/portfolio/portfolio-final/projects-folder/cliography-poster.pdf" target="_blank">UConn Frontiers Poster Exhibition</a></strong>
 								<div class="sub-head-list">Author, Presenter</div>
 								<div class="sub-head-list">04/10/2015</div>
 								<ul>
